Дз по теме Исключения и обработка ошибок. Добавлено решение 4 задачи

--- a/HW_Exceptions_error.ipynb
+++ b/HW_Exceptions_error.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,20 @@
     "            return date_list\n",
     "    except:\n",
     "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Задание 4\n",
+    "# Ошибка list index out of range означает, что индекс в списке находится вне диапазона.\n",
+    "# У нас был список из 3 элементов и результатом функции мы возвращали значение списка с индексом 1\n",
+    "# (DEFAULT_USER_COUNT = 3, отсюда DEFAULT_USER_COUNT-2 = 1)\n",
+    "# После того как мы первый раз обратились к функции мы удалили одно из значений списка default_list и в списке у нас осталось 2 элемента\n",
+    "# Обратившись к функции 2ой раз мы удалили еще один элемент из списка и у нас в списке осталось только одно значение и у нас не осталось в списке элементов с индексом 1"
    ]
   }
  ],
