--- a/Pandas_Function and group/Pandas_Function_group.ipynb
+++ b/Pandas_Function and group/Pandas_Function_group.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,42 +136,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Центр</th>\n",
-       "      <th>Северо-Запад</th>\n",
-       "      <th>Дальний Восток</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>москва</td>\n",
-       "      <td>петербург</td>\n",
-       "      <td>владивосток</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.872470</td>\n",
+       "      <td>средний рейтинг</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>тула</td>\n",
-       "      <td>псков</td>\n",
-       "      <td>сахалин</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.401869</td>\n",
+       "      <td>средний рейтинг</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ярославль</td>\n",
-       "      <td>мурманск</td>\n",
-       "      <td>хабаровск</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.161017</td>\n",
+       "      <td>средний рейтинг</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.384615</td>\n",
+       "      <td>средний рейтинг</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.267857</td>\n",
+       "      <td>средний рейтинг</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Центр Северо-Запад Дальний Восток\n",
-       "0     москва    петербург    владивосток\n",
-       "1       тула        псков        сахалин\n",
-       "2  ярославль     мурманск      хабаровск"
+       "   movieId    rating            class\n",
+       "0        1  3.872470  средний рейтинг\n",
+       "1        2  3.401869  средний рейтинг\n",
+       "2        3  3.161017  средний рейтинг\n",
+       "3        4  2.384615  средний рейтинг\n",
+       "4        5  3.267857  средний рейтинг"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Задание 1\n",
+    "df = pd.read_csv('ratings.csv')\n",
+    "#загружаем дата фрэйм\n",
+    "film_rating = df[['movieId','rating']]\n",
+    "# вырезаем столбцы с ИД фильма и рейтингом\n",
+    "mean_rating = film_rating.groupby('movieId').mean().reset_index()\n",
+    "# считаем средний рейтинг фильмов и поправляем съехавшую шапку таблицы\n",
+    "def class_group(rating, x, y):\n",
+    "    if rating <= x:\n",
+    "        return 'низкий рейтинг'\n",
+    "    elif rating <= y:\n",
+    "        return 'средний рейтинг'\n",
+    "    else:\n",
+    "        return 'высокий рейтинг'\n",
+    "# пишем функцию на основании которой будет присваиваться класс фильма в зависимости от рейтинга\n",
+    "mean_rating['class'] = mean_rating['rating'].apply(class_group, x = 2, y = 4)\n",
+    "# добавляем новый столбец, который строится на основании написанной функции, примененной к столбцу со средним рейтингом\n",
+    "mean_rating.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined         99253\n",
+       "Центр               387\n",
+       "Северо-Запад        266\n",
+       "Дальний Восток       94\n",
+       "Name: geo, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,15 +234,23 @@
    "source": [
     "### Задание 2\n",
     "df = pd.read_csv('keywords.csv')\n",
-    "geo_data =pd.DataFrame({'Центр': ['москва', 'тула', 'ярославль'],\n",
+    "geo = {'Центр': ['москва', 'тула', 'ярославль'],\n",
     "'Северо-Запад': ['петербург', 'псков', 'мурманск'],\n",
-    "'Дальний Восток': ['владивосток', 'сахалин', 'хабаровск']})\n",
-    "geo_data.head()"
+    "'Дальний Восток': ['владивосток', 'сахалин', 'хабаровск']}\n",
+    "df.head()\n",
+    "def geo_classificator(keyword):\n",
+    "    for region, city_list in geo.items():\n",
+    "        for city in city_list:\n",
+    "            if city in keyword:\n",
+    "                return region\n",
+    "    return 'undefined'\n",
+    "df['geo'] = df['keyword'].apply(geo_classificator)\n",
+    "df['geo'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,34 +274,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>years</th>\n",
+       "      <th>year</th>\n",
        "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1951.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1951</td>\n",
        "      <td>3.906653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1952.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1952</td>\n",
        "      <td>3.802318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1962.0</td>\n",
+       "      <th>13</th>\n",
+       "      <td>1962</td>\n",
        "      <td>3.772962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1953.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1953</td>\n",
        "      <td>3.738878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1957.0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>1957</td>\n",
        "      <td>3.693322</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -246,15 +309,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     years    rating\n",
-       "1   1951.0  3.906653\n",
-       "2   1952.0  3.802318\n",
-       "12  1962.0  3.772962\n",
-       "3   1953.0  3.738878\n",
-       "7   1957.0  3.693322"
+       "    year    rating\n",
+       "2   1951  3.906653\n",
+       "3   1952  3.802318\n",
+       "13  1962  3.772962\n",
+       "4   1953  3.738878\n",
+       "8   1957  3.693322"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,21 +332,23 @@
     "        if str(el) in movie_title:\n",
     "            return el\n",
     "        pass\n",
+    "    return 1900\n",
     "movies['year'] = movies['title'].apply(production_year)\n",
+    "movies['year'].value_counts()\n",
     "#Создаем функцию production_year, которая присваивает каждому фильму год выпуска по след алгоритму:\n",
     "# проходим по элементам в списке годов, если элемент присутствует, то присваевыем номер года, если нет - пропускаем\n",
-    "def null_year(movie_year):\n",
-    "    if movie_year == 0:\n",
-    "        return 1900\n",
-    "    return movie_year\n",
-    "movies['years'] = movies['year'].apply(null_year)\n",
+    "#def null_year(movie_year):\n",
+    "#    if movie_year == 0:\n",
+    "#        return 1900\n",
+    "#    return movie_year\n",
+    "#movies['years'] = movies['year'].apply(null_year)\n",
     "# для тех фильмов, для которых не было года выпуска в нашем спсике присваивем год выпуска 1900\n",
     "film_rating = rating[['movieId','rating']]\n",
     "mean_rating = film_rating.groupby('movieId').mean().reset_index()\n",
     "#считаем средний рейтинг для фильмов \n",
-    "year_rating = movies.merge(mean_rating, on = 'movieId', how = 'left')[['years', 'rating']]\n",
+    "year_rating = movies.merge(mean_rating, on = 'movieId', how = 'left')[['year', 'rating']]\n",
     "#объединяем таблицу с фильмами и годов выпуска с таблицей с средним рейтингом \n",
-    "mean_year_rating = year_rating.groupby('years').mean().reset_index()\n",
+    "mean_year_rating = year_rating.groupby('year').mean().reset_index()\n",
     "# группируем фильмы по году выпуска\n",
     "mean_year_rating.sort_values(by = 'rating', ascending = False).head()\n",
     "# сортируем по убыванию рейтинга"
